Associating IO and lifecycle of Quickstart app with Benchmark app.